Further progress. Initiated start on sending emails.

--- a/Identity3_0/appsettings.json
+++ b/Identity3_0/appsettings.json
@@ -9,5 +9,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=IdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "EmailSettings": {
+    "MailServer": "smtp.outlook.com",
+    "MailPort": 587,
+    "SenderName": "Micael Ståhl",
+    "Sender": "info.identity@outlook.com",
+    "Password": "Password!23"
   }
 }
