Figured out how to send emails to users and also how to confirm email addresses.

--- a/Identity3_0/appsettings.json
+++ b/Identity3_0/appsettings.json
@@ -13,8 +13,8 @@
   "EmailSettings": {
     "MailServer": "smtp.outlook.com",
     "MailPort": 587,
-    "SenderName": "Micael Ståhl",
-    "Sender": "info.identity@outlook.com",
-    "Password": "Password!23"
+    "SenderName": "Administator",
+    "Sender": "micael.developer@hotmail.com",
+    "Password": "VirtuosoDeveloper!23"
   }
 }
